--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,42 @@
+# Django #
+*.log
+*.pot
+*.pyc
+__pycache__
+db.sqlite3
+media
+
+# Backup files # 
+*.bak 
+
+# Python # 
+*.py[cod] 
+*$py.class 
+
+# Video Files #
 *.ts
 *.m3u8
+
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
+
+# celery #
+celerybeat-schedule.*
+
+# Environments #
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
+# Visual Studio Code #
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+.history
