fix video player in webpage rename cam to camera git ignore trainer.yml

--- a/ml/camera_config.json
+++ b/ml/camera_config.json
@@ -1,6 +1,6 @@
 [
     {
-        "streaming_dir": "C:\\Users\\myles\\Documents\\project\\CCTV_Cam\\tmp_stream_output",
+        "streaming_dir": "C:\\Users\\myles\\Documents\\project\\CCTV_Cam\\CCTV_Cam\\portal\\cctv\\static\\cameras",
         "camera_name": "camera1",
         "camra_path_url": "http://192.168.1.100:8080/camera/livestream.m3u8"
     }
