--- a/ml/manager_config.json
+++ b/ml/manager_config.json
@@ -1,5 +1,6 @@
 {
     "new_find_dir": "C:\\Users\\myles\\Documents\\project\\CCTV_Cam\\tmp_new_add",
+    "alert_dir": "C:\\Users\\myles\\Documents\\project\\CCTV_Cam\\tmp_alerts",
     "data_set_dir": "C:\\Users\\myles\\Documents\\project\\CCTV_Cam\\tmp_dataset",
     "cascadeClassifierPath":"D:\\Python\\Lib\\site-packages\\cv2\\data\\haarcascade_frontalface_alt.xml",
     "unknown_threshold": 10,
